[Refactor] Updated the counter div

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="Title__Column">
         <div class="counter">
-            <span class="counter-icon">🖼️</span>
+            <span class="counter-icon">🖼</span>
             <span>TOTAL IMAGES: <span id="image-counter">0</span></span>
         </div>
         <h1>INFINITY</h1>
