--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         <h1>INFINITY</h1>
         <h2>scroll</h2>
     </div>
+    <div class="search-container">
+        <div class="search-bar">
+            <input type="text" id="search-input" placeholder="Search images...">
+            <button id="search-button">
+                <span class="search-icon">🔍</span>
+            </button>
+        </div>
+    </div>
 
      <div class="Loader" id="Loader">
         <img src="assets/loader.svg" alt="Loading">
