[Create] New scroll to top feature

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
       <div class="Image__Container" id="Image__Container">
       </div>
+    <div class="scroll-top" id="scrollTop">
+        <span class="scroll-icon">🔼</span>
+        <span class="scroll-text">Back to Top</span>
+    </div>
     <script src="Infinity.js"></script>
 </body>
 </html>
